package edu.fiuba.algo3.modelo;

import java.util.List;

public class Zergs implements Imperio {
    private List<Edificio> edificios;

    public void construirCriadero(Zangano zangano) {

    }
}
