@startuml
'https://plantuml.com/class-diagram

class Zerg{
    - arrayConstrucciones: Zangano

    + construir(a: Construccion)
    + pasarTurno()
/'
    + construir(a: Criadero)
    + construir(a: Extractor)
    + construir(a: ReservaDeProduccion)
    + construir(a: Guarida)
    + construir(a: Espiral)
    + expanderMoho()
'/
}

class Zangano{

   + + construir(a: Construccion)
}

/'
class Minerales{

}

class GasVespeno{

}'/

class Criadero{
   - coleccionDeLarvas: Larvas

   + criar()
}

class Extractor{
   - coleccionDeZanganos: Zanganos

   + extraer()
}

interface Construccion{}

Zerg o--"*" Zangano

Zangano o--"*" Criadero
Zangano o--"*" Extractor
Zangano o--"*" ReservaDeProduccion
Zangano o--"*" Guarida
Zangano o--"*" Espiral

Criadero *-- "0..3" Larva

Extractor ..> GasVespeno

Construccion <|.. Criadero
Construccion <|.. Extractor
Construccion <|.. ReservaDeProduccion
Construccion <|.. Guarida
Construccion <|.. Espiral

@enduml